rs-fMRI/v1.1/README.md
# Meta_matching_models v1.1
This folder contains  v1.1 meta matching model trained from the UK Biobank (N = 36,834) and example to run it. We removed participants who have withdrawn from the UK Biobank (withdrawn before 16/11/2021) and re-trained DNN. Besides, we performed participant-wise normalization to the input FC (functional connectivity) vector (demean and normalize by L2 norm of FC vector for each participant), to make the model generalize better across GSR/non-GSR fMRI data.


## Reference
+ He, T., An, L., Chen, P., Chen, J., Feng, J., Bzdok, D., Holmes, A.J., Eickhoff, S.B. and Yeo, B.T., 2022. [**Meta-matching as a simple framework to translate phenotypic predictive models from big to small data**](https://doi.org/10.1038/s41593-022-01059-9), Nature Neuroscience 25, 795-804.

## Data Processing
Meta matching model v1.1 used Schaefer2018 parcellation with 400 parcels + 19 sub-cortical regions. In order to use the pre-trained model, you need generate your own data with same parcellation. You can refer to the [data processing code for HCP dataset in our full release](https://github.com/ThomasYeoLab/CBIG/tree/master/stable_projects/predict_phenotypes/He2022_MM/data_processing#step-51-step-5-for-whole-data-processing-code) where we convert ICA FIX HCP S1200 data into 419 by 419 FC (functional connectivity) matrix with [Schaefer2018_400Parcels_17Networks_order.dlabel.nii](https://github.com/ThomasYeoLab/CBIG/blob/master/stable_projects/brain_parcellation/Schaefer2018_LocalGlobal/Parcellations/HCP/fslr32k/cifti/Schaefer2018_400Parcels_17Networks_order.dlabel.nii) and [subcortical_HCP_cbig_order.dlabel.nii](https://github.com/ThomasYeoLab/CBIG/blob/master/stable_projects/predict_phenotypes/He2022_MM/data_processing/step5_hcp_data/extra/subcortical_HCP_cbig_order.dlabel.nii), and [data processing code for UK Biobank dataset in our full release](https://github.com/ThomasYeoLab/CBIG/tree/master/stable_projects/predict_phenotypes/He2022_MM/data_processing#step-60-optional) where we convert rsfMRI data [data-field 20227 of UK Biobank](https://biobank.ctsu.ox.ac.uk/crystal/field.cgi?id=20227) to MNI152 2mm space then to 419 by 419 FC (functional connectivity) matrix with [Schaefer2018_400Parcels_17Networks_order_FSLMNI152_2mm.nii.gz](https://github.com/ThomasYeoLab/CBIG/blob/master/stable_projects/predict_phenotypes/He2022_MM/data_processing/step6_experiment_2/ukbb_20227_to_fc419/extra/Schaefer2018_400Parcels_17Networks_order_FSLMNI152_2mm.nii.gz). If you need more information about 19 sub-cortical regions, you can take a better look at [code that we created 419 mask for UK Biobank dataset in our full release](https://github.com/ThomasYeoLab/CBIG/blob/master/stable_projects/predict_phenotypes/He2022_MM/data_processing/step6_experiment_2/ukbb_20227_to_fc419/CBIG_MM_create_FC419_MNI2mm.m).

The model needs flatten FC for input, here is the simple code to flatten 419 by 419 matrix.
```python
import numpy as np
roi = 419
index = np.tril(np.ones(roi), k=-1) == 1
fc_flat = fc[index]
```
## Order of 67 UK Biobank phenotypes in DNN output
Our DNN (trained on UK Biobank) outputs 67 phenotypes. The order of 67 phenotypes (#1 to #67) is as follows:  

|        Outputs of DNN        | <span style="font-weight:normal"> #1 | <span style="font-weight:normal"> #2 | <span style="font-weight:normal"> #3 | <span style="font-weight:normal"> #4 | <span style="font-weight:normal"> #5  | <span style="font-weight:normal"> #6 | <span style="font-weight:normal"> #7  | <span style="font-weight:normal"> #8 | <span style="font-weight:normal"> #9  | <span style="font-weight:normal"> #10 | <span style="font-weight:normal"> #11  | <span style="font-weight:normal"> #12 | <span style="font-weight:normal"> #13  | <span style="font-weight:normal"> #14 | <span style="font-weight:normal"> #15  | <span style="font-weight:normal"> #16 | <span style="font-weight:normal">  #17 | <span style="font-weight:normal">#18 | <span style="font-weight:normal">#19 | <span style="font-weight:normal">#20 | <span style="font-weight:normal">#21 | <span style="font-weight:normal">#22 | <span style="font-weight:normal">#23 | <span style="font-weight:normal">#24 | <span style="font-weight:normal">#25 | <span style="font-weight:normal">#26 | <span style="font-weight:normal">#27 | <span style="font-weight:normal">#28 | <span style="font-weight:normal">#29 | <span style="font-weight:normal">#30 | <span style="font-weight:normal">#31 | <span style="font-weight:normal">#32 | <span style="font-weight:normal">#33 | <span style="font-weight:normal">#34 | <span style="font-weight:normal">#35 |<span style="font-weight:normal"> #36 | <span style="font-weight:normal">#37 |<span style="font-weight:normal"> #38 | <span style="font-weight:normal">#39 |<span style="font-weight:normal"> #40 | <span style="font-weight:normal">#41 | <span style="font-weight:normal">#42 | <span style="font-weight:normal">#43 |<span style="font-weight:normal"> #44 |<span style="font-weight:normal"> #45 |<span style="font-weight:normal"> #46 | <span style="font-weight:normal">#47 | <span style="font-weight:normal">#48 | <span style="font-weight:normal">#49 | <span style="font-weight:normal">#50 |<span style="font-weight:normal"> #51 |<span style="font-weight:normal"> #52 | <span style="font-weight:normal">#53 | <span style="font-weight:normal">#54 | #55 | <span style="font-weight:normal">#56 | <span style="font-weight:normal">#57 | <span style="font-weight:normal">#58 | <span style="font-weight:normal">#59 | <span style="font-weight:normal">#60 | <span style="font-weight:normal">#61 | <span style="font-weight:normal">#62 | <span style="font-weight:normal">#63 | <span style="font-weight:normal">#64 |<span style="font-weight:normal"> #65 | <span style="font-weight:normal">#66 |   <span style="font-weight:normal">   #67 |
|:-----------------------:|:------------------------------------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|:-------:|
| **Corresponding phenotypes** |             Alcohol 1             |              Alcohol 2               |              Alcohol 3               |              Time walk               |              Time drive               |               Time TV                |                 Sleep                 |               Age edu                |                 Work                  |                Travel                 |               #household               |                 Neuro                 |                Hearing                 |              Fluid Int.               |                Matching                |                  Sex                  |               Matching-o               | Age| Trail-o C1| Trail-o C3| Digit-o C1| Digit-o C6| Sex G C1| Sex G C2| Genetic C1| Cancer C1| Urine C1| Blood C2| Blood C3| Blood C4| Blood C5| Deprive C1| Dur C1| Dur C2| Dur C4| Trail C1| Tower C1| Digit 1| Match| ProMem C1| #Mem C1| Matrix C1| Matrix C2| Matrix C3| Illness C1| Illness C4| Loc C1| Breath C1| Grip C1| ECG C1| ECG C2| ECG C3| ECG C6| Carotid C1| Carotid C5| Bone C1| Bone C3| Body C1| Body C2| Body C3| BP eye C2| BP eye C3| BP eye C4| BP eye C5| BP eye C6| Family C1| Smoke C1 |

The description of above 67 phenotypes can be found in Supplementary Tables 1 and 2 of He et al., 2022. 

## Usage
Please check meta_matching_v1.1.ipynb for the model usage and example.

## Bugs and Questions
Please contact He Tong at hetong1115@gmail.com, Lijun An at anlijun.cn@gmail.com, Pansheng Chen at chenpansheng@gmail.com and Thomas Yeo at yeoyeo02@gmail.com.
